Added text and images to html file
Added an image of teriyaki salmon and added an ingredients list and steps to make the recipe

[Ticket: 2]

--- a/recipes/teriyaki-salmon.html
+++ b/recipes/teriyaki-salmon.html
@@ -5,15 +5,38 @@
 	<title>salmon teriyaki</title>
 </head>
 <body>
+	<div>
 	<h1>teriyaki salmon</h1>
-	<img src=""/>
+	<img src="img/teriyaki salmon.webp"/>
 	<h3>ingredients</h3>
 	<ul>
-		<li></li>
+		<li>2 skinless salmon fillets</li>
+		<li>1 tbsp sweet chilli sauce</li>
+		<li>1 tbsp honey</li>
+		<li>1 tsp sesame oil</li>
+		<li>1 tbsp mirin</li>
+		<li>2 tbsp soy sauce</li>
+		<li>2 tsp finely grated ginger</li>
+		<li>rice</li>
+	</ul>
+	<h5>pak choi ingredients</h5>
 	<ul>
+		<li>2 large pak choi</li>
+		<li>2 tsp vegetable oil</li>
+		<li>2 tsp sesame oil</li>
+		<li>3 garlic cloves, grated</li>
+		<li>75ml fish or vegetable stock</li>
+		<li>2 tsp toasted sesame seeds</li>
+	</ul>
+	</div>
 	<h3>steps</h3>
 	<ol>
-		<li></li>
+		<li>heat oven to 200C/180C fan/gas 6 and put the skinless salmon fillets in a shallow baking dish</li>
+		<li>mix the sweet chilli sauce, honey, sesame oil, mirin or dry sherry, soy sauce and finely grated ginger in a small bowl and pour over the salmon so the fillets are completely covered. Bake for 10 mins.</li>
+		<li>meanwhile, cut a slice across the base of the pak choi so the leaves separate</li>
+		<li>heat the vegetable oil and sesame oil in a wok, add the grated garlic cloves and stir-fry briefly to soften</li>
+		<li>add the pak choi and fry until the leaves start to wilt. Pour over the or vegetable stock, tightly cover the pan and allow to cook for 5 mins – you're aiming for the stems to be tender but still have a bit of bite</li>
+		<li>serve the pak choi in shallow bowls, top with the salmon and spoon over the juices. Scatter with the toasted sesame seeds and serve with brown rice or noodles, if you like</li>
 	</ol>
 </body>
 </html>
