--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>odin recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagne recipe</a>
+    <h1>odin recipes</h1>
+    <img src="img/spike.gif"/>
+    <p>howdy space cowboy! 🤠</p>
+    <p>here are recipes of my favourite meals :&#41;</p>
+    <ul>
+        <li><a href="recipes/lasagna.html">lasagne recipe</a></li>
+        <li><a href="recipes/teriyaki-salmon.html">teriyaki salmon recipe</a></li>
+</ul>
 </body>
 </html>
