Created styles sheet for 'index.html'
Created 'styles.css'
Linked 'styles.css' to 'index.html'
Changed bg colour and font colour

[Ticket: 3]

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css"/>
     <title>odin recipes</title>
 </head>
 <body>
     <h1>odin recipes</h1>
     <img src="img/spike.gif"/>
-    <p>howdy space cowboy! 🤠</p>
+    <p class="gree">howdy space cowboy! 🤠</p>
     <p>here are recipes of my favourite meals :&#41;</p>
-    <ul>
+    <div><ul>
         <li><a href="recipes/lasagna.html">lasagne recipe</a></li>
         <li><a href="recipes/teriyaki-salmon.html">teriyaki salmon recipe</a></li>
-</ul>
+    </ul></div>
 </body>
 </html>
