--- a/recipes/teriyaki-salmon.html
+++ b/recipes/teriyaki-salmon.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div>
-	<h1>teriyaki salmon</h1>
+	<h1 class="title">teriyaki salmon</h1>
 	<img src="img/teriyaki salmon.webp"/>
 	<h3>ingredients</h3>
 	<ul>
